[gd_scene load_steps=64 format=3 uid="uid://edep54brt81i"]

[ext_resource type="Script" path="res://frito_final_scene.gd" id="1_0dkru"]
[ext_resource type="Texture2D" uid="uid://bagdidv5w6jqb" path="res://assets/Rocky Roads/Tilesets/tileset_forest.png" id="4_w3ksg"]
[ext_resource type="Texture2D" uid="uid://hshamq1hcsuu" path="res://assets/Seasonal Tilesets/5 - Misc. universal tiles/House (112 x 96).png" id="5_hqw31"]
[ext_resource type="Texture2D" uid="uid://c1yeps5b85cnl" path="res://assets/corn.png" id="6_i3ix8"]
[ext_resource type="Texture2D" uid="uid://ca3jpt54gnsk5" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/5 - Sky_color.png" id="7_cxdh6"]
[ext_resource type="Texture2D" uid="uid://cqkdedjp0dbvn" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/2 - Hills.png" id="8_lhug8"]
[ext_resource type="Shader" path="res://shader/level_3.gdshader" id="9_8jpxb"]
[ext_resource type="Texture2D" uid="uid://dlt6fmv5cq22v" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" id="10_tllre"]
[ext_resource type="Texture2D" uid="uid://c80c2eiwkyhbl" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenDie-Sheet.png" id="11_1errk"]
[ext_resource type="Texture2D" uid="uid://g6csoon5erdj" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenIdle-Sheet.png" id="11_3abkq"]
[ext_resource type="Texture2D" uid="uid://bho38o5u2lhcd" path="res://assets/old_man/16x16.png" id="11_l5o5q"]
[ext_resource type="Texture2D" uid="uid://c2bljhocno2sa" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenFly-Sheet.png" id="12_wckxg"]
[ext_resource type="Texture2D" uid="uid://dvbf1stu6cusd" path="res://assets/ChickenPack/ChickenPack/SpriteSheet/ChickenJumping-Sheet.png" id="13_c484q"]
[ext_resource type="AudioStream" uid="uid://bjfwommm2rxxo" path="res://assets/00 lolurio - Everyday Life (mp3cut.net).mp3" id="15_p2ake"]
[ext_resource type="Texture2D" uid="uid://cswmyyvhx21nj" path="res://assets/pipo-popupemotes002.png" id="16_52qvp"]
[ext_resource type="Texture2D" uid="uid://cjb6a4w2s4r1w" path="res://assets/ChickenDie-Sheet_03.png" id="17_3ee8q"]
[ext_resource type="Texture2D" uid="uid://ckjrn03s1vd61" path="res://assets/pipo-popupemotes018.png" id="17_40too"]
[ext_resource type="Texture2D" uid="uid://dl7qg6cby2r4g" path="res://assets/pipo-popupemotes031.png" id="18_t742l"]
[ext_resource type="Texture2D" uid="uid://dt1x6204xjx80" path="res://assets/37_button UI.png" id="19_4ynvk"]
[ext_resource type="FontFile" uid="uid://cb64tb4mbh747" path="res://assets/m5x7.ttf" id="20_c7fo0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wgy6e"]
texture = ExtResource("4_w3ksg")
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_11ji8"]
texture = ExtResource("5_hqw31")
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0

[sub_resource type="TileSet" id="TileSet_7ny1s"]
sources/0 = SubResource("TileSetAtlasSource_wgy6e")
sources/1 = SubResource("TileSetAtlasSource_11ji8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t8grx"]
shader = ExtResource("9_8jpxb")
shader_parameter/move_speed = 0.04

[sub_resource type="Animation" id="Animation_7gg7a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2th8o"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qxsm1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hmmg"]
_data = {
"RESET": SubResource("Animation_7gg7a"),
"fade_in": SubResource("Animation_2th8o"),
"fade_out": SubResource("Animation_qxsm1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_nx7h5"]
atlas = ExtResource("11_l5o5q")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqgeu"]
atlas = ExtResource("11_l5o5q")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dphm"]
atlas = ExtResource("11_l5o5q")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iagn"]
atlas = ExtResource("11_l5o5q")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3t8q"]
atlas = ExtResource("11_l5o5q")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rdfv"]
atlas = ExtResource("11_l5o5q")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu7ov"]
atlas = ExtResource("11_l5o5q")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6j7b"]
atlas = ExtResource("11_l5o5q")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_twhe2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx7h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqgeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dphm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iagn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3t8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rdfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu7ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6j7b")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ixio"]
atlas = ExtResource("11_3abkq")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3mcf"]
atlas = ExtResource("11_3abkq")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq8ko"]
atlas = ExtResource("11_3abkq")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqouo"]
atlas = ExtResource("11_3abkq")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy31h"]
atlas = ExtResource("11_3abkq")
region = Rect2(80, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk2gd"]
atlas = ExtResource("11_1errk")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_156bw"]
atlas = ExtResource("12_wckxg")
region = Rect2(0, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdm6d"]
atlas = ExtResource("13_c484q")
region = Rect2(40, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bsg1"]
atlas = ExtResource("13_c484q")
region = Rect2(0, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pvmb"]
atlas = ExtResource("13_c484q")
region = Rect2(20, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxfbr"]
atlas = ExtResource("13_c484q")
region = Rect2(60, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wl0w"]
atlas = ExtResource("13_c484q")
region = Rect2(80, 0, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_panig"]
atlas = ExtResource("13_c484q")
region = Rect2(100, 0, 20, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_26d2q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ixio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3mcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq8ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy31h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk2gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_156bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdm6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pvmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxfbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_panig")
}],
"loop": true,
"name": &"rise",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2cta4"]
atlas = ExtResource("16_52qvp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vxit"]
atlas = ExtResource("16_52qvp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsjav"]
atlas = ExtResource("16_52qvp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o58mm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cta4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vxit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsjav")
}],
"loop": true,
"name": &"duvida",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_j3jnv"]
atlas = ExtResource("17_40too")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhd3l"]
atlas = ExtResource("17_40too")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy00d"]
atlas = ExtResource("17_40too")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jukfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3jnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhd3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy00d")
}],
"loop": true,
"name": &"fala",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tasxn"]
atlas = ExtResource("18_t742l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhw1h"]
atlas = ExtResource("18_t742l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eih0i"]
atlas = ExtResource("18_t742l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_icbut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tasxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhw1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eih0i")
}],
"loop": true,
"name": &"fofo",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(62, 152)
scale = Vector2(2.71349, 2.76419)
script = ExtResource("1_0dkru")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = -37.0
offset_top = 217.0
offset_right = 645.0
offset_bottom = 332.0

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(7.73912, -9.40601)
tile_set = SubResource("TileSet_7ny1s")
format = 2
layer_0/tile_data = PackedInt32Array(131069, 131072, 1, 131070, 196608, 1, 65548, 196608, 1, 65549, 327680, 1, 131071, 196608, 1, 65536, 196608, 1, 65537, 196608, 1, 65538, 196608, 1, 65539, 196608, 1, 65540, 196608, 1, 65541, 196608, 1, 65542, 196608, 1, 65543, 196608, 1, 65544, 196608, 1, 65545, 196608, 1, 65546, 196608, 1, 65547, 196608, 1, 65550, 393216, 1, 196605, 65536, 3, 262141, 65536, 4, 196606, 131072, 3, 262142, 131072, 4, 196607, 196608, 3, 262143, 196608, 4, 131072, 262144, 3, 196608, 262144, 4, 131073, 262144, 2, 196609, 196608, 4, 131074, 262144, 3, 196610, 196608, 4, 131075, 327680, 3, 196611, 196608, 4, 131076, 196608, 3, 196612, 196608, 4, 131077, 262144, 3, 196613, 262144, 4, 131078, 327680, 3, 196614, 327680, 4, 131079, 262144, 2, 196615, 196608, 4, 131080, 262144, 3, 196616, 196608, 4, 131081, 327680, 3, 196617, 196608, 4, 131082, 196608, 3, 196618, 196608, 4, 131083, 262144, 3, 196619, 262144, 4, 131084, 262144, 2, 196620, 327680, 4, 131085, 393216, 3, 196621, 393216, 4, -196601, 1, 2, -131065, 1, 3, -65529, 1, 4, 7, 1, 5, -262136, 65537, 1, -196600, 65537, 2, -131064, 65537, 3, -65528, 589825, 4, 8, 589825, 5, -327671, 131073, 0, -262135, 131073, 1, -196599, 131073, 2, -131063, 131073, 3, -65527, 655361, 4, 9, 655361, 5, -327670, 196609, 0, -262134, 196609, 1, -196598, 196609, 2, -131062, 196609, 3, -65526, 196609, 4, 10, 196609, 5, -327669, 262145, 0, -262133, 262145, 1, -196597, 262145, 2, -131061, 262145, 3, -65525, 262145, 4, 11, 262145, 5, -262132, 327681, 1, -196596, 327681, 2, -131060, 327681, 3, -65524, 327681, 4, 12, 327681, 5, -196595, 393217, 2, -131059, 393217, 3, -65523, 393217, 4, 13, 393217, 5)

[node name="corn" type="Sprite2D" parent="."]
position = Vector2(177.724, -4.36553)
scale = Vector2(1.77676, 1.63678)
texture = ExtResource("6_i3ix8")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(432, 0)

[node name="ceu" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
self_modulate = Color(0.851485, 0.382623, 0.976266, 0.533333)
position = Vector2(0, -30)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_cxdh6")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(0, 432)

[node name="planta" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(0, -100)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_lhug8")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(0, 432)

[node name="nuvem" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_t8grx")
position = Vector2(0, -30)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_tllre")
centered = false

[node name="Morto" type="Sprite2D" parent="."]
position = Vector2(23.5859, -0.723539)
texture = ExtResource("17_3ee8q")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6hmmg")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
self_modulate = Color(0, 0, 0, 1)
offset_right = 642.0
offset_bottom = 325.0

[node name="Old_man" type="AnimatedSprite2D" parent="."]
position = Vector2(142.989, -5.42655)
scale = Vector2(1.51346, 1.51748)
sprite_frames = SubResource("SpriteFrames_twhe2")
animation = &"walk"
frame_progress = 0.502677
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[node name="Galinho" type="AnimatedSprite2D" parent="."]
position = Vector2(23.2173, -0.723539)
sprite_frames = SubResource("SpriteFrames_26d2q")
animation = &"rise"

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0)
offset_left = -107.242
offset_top = -134.578
offset_right = -67.242
offset_bottom = -94.5783
scale = Vector2(10.5685, 6.6842)

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 4.0

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_p2ake")
volume_db = -6.933

[node name="BalaoDuvida" type="AnimatedSprite2D" parent="."]
position = Vector2(25.797, -22.7915)
scale = Vector2(0.686536, 0.695494)
sprite_frames = SubResource("SpriteFrames_o58mm")
animation = &"duvida"
frame_progress = 0.662326

[node name="BalaoFala" type="AnimatedSprite2D" parent="."]
position = Vector2(52.6997, -24.9621)
scale = Vector2(0.696018, 0.667513)
sprite_frames = SubResource("SpriteFrames_jukfr")
animation = &"fala"
frame_progress = 0.104161

[node name="BalaoCute" type="AnimatedSprite2D" parent="."]
position = Vector2(26.1656, -22.0679)
scale = Vector2(0.789278, 0.770363)
sprite_frames = SubResource("SpriteFrames_icbut")
animation = &"fofo"
frame_progress = 0.606271

[node name="Button" type="Button" parent="."]
offset_left = 65.9667
offset_top = -39.4329
offset_right = 89.9667
offset_bottom = -15.4329
focus_mode = 0
action_mode = 0
icon = ExtResource("19_4ynvk")
flat = true

[node name="Label" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.552941)
offset_left = 64.1241
offset_top = -48.8389
offset_right = 104.124
offset_bottom = -25.8389
theme_override_fonts/font = ExtResource("20_c7fo0")
text = "PRESS"

[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
[connection signal="animation_finished" from="Old_man" to="." method="_on_old_man_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
